# wordle_solver

./: Cargo.toml  README.md
logger/: Cargo.toml
logger/src/: lib.rs
src/: main.rs
