workspace = { members = ["logger"] }
[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# headless_chrome = "1.0.9"
thirtyfour = "0.31.0"
logger = { path = "logger" }
chrono = "0.4.35"
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = "0.52.0"
